# cpp-advanced-Technopark-VK

./: README.md
dz1/: CMakeLists.txt  Readme.md  intrusive_list.hpp  lru.hpp  main.cpp  test_intrusive_list.cpp  test_lru.cpp
dz2/: CMakeLists.txt  Readme.md  input.txt  main.cpp
dz2/tests/: crew_members.cpp  passengers.cpp  plane.cpp
dz2/units/: crew_members.cpp  crew_members.hpp  passengers.cpp  passengers.hpp  plane.cpp  plane.hpp  unit.cpp  unit.hpp
dz3/: CMakeLists.txt  main.cpp
seminar_task/: CMakeLists.txt  main.cpp
seminar_task1/: CMakeLists.txt  main.cpp  main_template.cpp
